--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gulp template standart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "is": "npm i --save-dev"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/skatchmast/gulp-template/issues"
   },
-  "homepage": "https://github.com/skatchmast/gulp-template#readme"
+  "homepage": "https://github.com/skatchmast/gulp-template#readme",
+  "devDependencies": {
+    "gulp": "^4.0.1"
+  }
 }
