--- a/package.json
+++ b/package.json
@@ -17,6 +17,20 @@
   },
   "homepage": "https://github.com/skatchmast/gulp-template#readme",
   "devDependencies": {
-    "gulp": "^4.0.1"
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.26.5",
+    "fs": "0.0.1-security",
+    "gulp": "^4.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-coffee": "^3.0.3",
+    "gulp-jsbeautifier": "^3.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "js-yaml": "^3.13.1"
   }
 }
