--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-coffee": "^3.0.3",
+    "gulp-concat": "^2.6.1",
     "gulp-jsbeautifier": "^3.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "js-yaml": "^3.13.1"
   }
 }
