--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "bower": "^1.8.8",
     "browser-sync": "^2.26.5",
     "fs": "0.0.1-security",
     "gulp": "^4.0.1",
