--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
   "devDependencies": {
     "jquery": "^3.3.1",
     "bootstrap": "^4.1.3",
-    "jquery.easing": "*",
-    "security-holder": "jquery.visible#*"
+    "jquery.easing": "^1.3.1"
   }
 }
