--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "run-sequence": "^2.2.1"
   }
 }
