--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "browser-sync": "^2.26.5",
     "fs": "0.0.1-security",
     "gulp": "^4.0.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-coffee": "^3.0.3",
     "gulp-concat": "^2.6.1",
+    "gulp-cssbeautify": "^1.0.1",
     "gulp-jsbeautifier": "^3.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
