--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   ],
   "devDependencies": {
     "jquery": "^3.3.1",
+    "jquery.easing": "^1.3.1",
     "bootstrap": "^4.1.3",
-    "jquery.easing": "^1.3.1"
+    "normalize.css": "^8.0.1"
   }
 }
