--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "jquery": "^3.3.1",
     "jquery.easing": "^1.3.1",
     "bootstrap": "^4.1.3",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "jquery-ui": "^1.12.1",
+    "owl.carousel": "^2.3.4"
   }
 }
